bitfields/tests/compile_error_cases/errors/bitflag_variant_without_explicit_value.rs
use bitfields::bitflag;

#[bitflag(u8)]
enum Flags {
    #[base]
    Unknown = 0,
    A,
}

fn main() {}

